--- a/js/web/package.json
+++ b/js/web/package.json
@@ -41,6 +41,7 @@
     "@types/karma": "^6.1.0",
     "@types/minimatch": "^5.1.2",
     "@types/minimist": "^1.2.2",
+    "@types/offscreencanvas": "^2019.7.0",
     "@types/platform": "^1.3.4",
     "@webgpu/types": "^0.1.30",
     "base64-js": "^1.5.1",
