--- a/onnxruntime/python/_pybind_state.py.in
+++ b/onnxruntime/python/_pybind_state.py.in
@@ -24,7 +24,7 @@ if platform.system() == "Windows":
         if not os.path.isfile(os.path.join(system_root, "System32", "vcruntime140_1.dll")):
             warnings.warn("Please install the 2019 Visual C++ runtime and then try again. "
                           "If you've installed the runtime in a non-standard location "
-                          r"(other than %SystemRoot%\System32), "
+                          "(other than %SystemRoot%\\System32), "
                           "make sure it can be found by setting the correct path.")
 
 @ONNXRUNTIME_IMPORT_PYTORCH_TO_RESOLVE_DLLS@
