--- a/tools/ci_build/github/azure-pipelines/qnn-ep-nuget-packaging-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/qnn-ep-nuget-packaging-pipeline.yml
@@ -61,6 +61,12 @@ jobs:
           versionSpec: '3.8'
           addToPath: true
       
+      - task: CmdLine@2
+        displayName: 'Check available QNN SDK versions'
+        inputs:
+          script: |
+            dir C:\data\qnnsdk\qnn*
+
       - task: PythonScript@0
         displayName: 'Build onnxruntime for x64'
         inputs:
