--- a/tools/ci_build/github/azure-pipelines/orttraining-linux-nightly-ortmodule-test-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/orttraining-linux-nightly-ortmodule-test-pipeline.yml
@@ -15,7 +15,7 @@ jobs:
   - script: |
       COMMIT_ID=$(python3 -c "import onnxruntime; print(onnxruntime.get_build_info().split('git-commit-id=')[1].split(',')[0])")
       cd $(Build.SourcesDirectory)
-      $(Build.SourcesDirectory)
+      git checkout $COMMIT_ID
       docker run \
         --gpus all \
         --rm \
