--- a/tools/ci_build/github/azure-pipelines/web-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/web-ci-pipeline.yml
@@ -36,10 +36,14 @@ pr:
     - 'setup.py'
     - 'build.*'
     - '.github'
+
     exclude:
     - 'onnxruntime/core/providers/tensorrt'
     - 'onnxruntime/core/providers/cuda'
     - 'onnxruntime/core/providers/rocm'
+    - '!onnxruntime/core/providers/rocm/rocm_provider_factory_creator.h'
+    - '!onnxruntime/core/providers/cuda/cuda_provider_factory_creator.h'
+    - '!onnxruntime/core/providers/tensorrt/tensorrt_provider_factory_creator.h'
 parameters:
 - name: NpmPublish
   displayName: 'NPM packages publish configuration'
