Update android-arm64-v8a-QNN-crosscompile-ci-pipeline.yml for Azure Pipelines

--- a/tools/ci_build/github/azure-pipelines/android-arm64-v8a-QNN-crosscompile-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/android-arm64-v8a-QNN-crosscompile-ci-pipeline.yml
@@ -66,7 +66,7 @@ jobs:
       set -e -x
       rm -rf /tmp/scripts
       cp -r tools/ci_build/github/linux/docker/inference/x64/python/cpu/scripts /tmp
-      /tmp/install_protobuf.sh -p $(Build.BinariesDirectory)/installed -d cmake/deps.txt
+      /tmp/scripts/install_protobuf.sh -p $(Build.BinariesDirectory)/installed -d cmake/deps.txt
       python3 tools/ci_build/build.py \
         --config Release \
         --android \
