--- a/tools/ci_build/github/azure-pipelines/templates/py-win-gpu.yml
+++ b/tools/ci_build/github/azure-pipelines/templates/py-win-gpu.yml
@@ -42,6 +42,21 @@ jobs:
             inputs:
               tsaConfigFilePath: '$(Build.SourcesDirectory)\.config\tsaoptions.json'
               appendSourceBranchName: false
+              
+          - template: download-deps.yml
+
+          - template: jobs/set-winenv.yml
+            parameters:
+              EnvSetupScript: ${{ parameters.ENV_SETUP_SCRIPT }}
+              DownloadCUDA: true
+
+          - task: PythonScript@0
+            displayName: 'Update deps.txt'
+            inputs:
+              scriptPath: $(Build.SourcesDirectory)/tools/ci_build/replace_urls_in_deps.py
+              arguments: --new_dir $(Build.BinariesDirectory)/deps
+              workingDirectory: $(Build.BinariesDirectory)
+
           - task: SDLNativeRules@3
             displayName: 'Run the PREfast SDL Native Rules for MSBuild'
             inputs:
