--- a/onnxruntime/python/tools/transformers/models/llama/requirements-cuda.txt
+++ b/onnxruntime/python/tools/transformers/models/llama/requirements-cuda.txt
@@ -1,4 +1,4 @@
 -r requirements.txt
---extra-index-url https://download.pytorch.org/whl/cu118
-torch>=2.0.1+cu118
+# Please manually install torch>=2.0.1 with CUDA enabled for the CUDA version installed in your system.
+# Instructions can be found here: https://pytorch.org/get-started/locally/
 onnxruntime-gpu>=1.16.0
