--- a/tools/ci_build/github/azure-pipelines/templates/component-governance-component-detection-steps.yml
+++ b/tools/ci_build/github/azure-pipelines/templates/component-governance-component-detection-steps.yml
@@ -6,8 +6,10 @@ parameters:
 
 steps:
 - ${{ if eq(variables['System.TeamProject'], 'Lotus') }}: 
-  - script: |
-      rd /s/q $(Build.BinariesDirectory)
+  - task: DeleteFiles@1
+    displayName: 'Remove unneeded files'
+    inputs:
+      contents: $(Build.BinariesDirectory)/*
     displayName: 'Clean up build directory'
 
   - task: ms.vss-governance-buildtask.governance-build-task-component-detection.ComponentGovernanceComponentDetection@0
