--- a/tools/ci_build/github/azure-pipelines/c-api-noopenmp-packaging-pipelines.yml
+++ b/tools/ci_build/github/azure-pipelines/c-api-noopenmp-packaging-pipelines.yml
@@ -227,21 +227,42 @@ stages:
     timeoutInMinutes: 120
     pool: onnxruntime-Ubuntu2004-AMD-CPU
     variables:
-      RocmVersion: '5.5'
+      RocmVersion: '5.6'
     steps:
-    - template: templates/set-version-number-variables-step.yml
+    - checkout: self                           # due to checkout multiple repos, the root directory is $(Build.SourcesDirectory)/onnxruntime
+      submodules: recursive
+    - checkout: manylinux                      # due to checkout multiple repos, the root directory is $(Build.SourcesDirectory)/manylinux, for get-docker-image-steps.yml
+      submodules: false
+
+    # get-docker-image-steps.yml will move the $(Build.SourcesDirectory)/manylinux into $(Build.SourcesDirectory)/onnxruntime,
+    # then rename $(Build.SourcesDirectory)/onnxruntime as $(Build.SourcesDirectory)
     - template: templates/get-docker-image-steps.yml
       parameters:
-        Dockerfile: tools/ci_build/github/pai/rocm-ci-pipeline-env.Dockerfile
+        Dockerfile: tools/ci_build/github/linux/docker/Dockerfile.manylinux2014_rocm
         Context: tools/ci_build/github/linux/docker
-        Repository: onnxruntimetrainingrocm-cibuild-rocm$(RocmVersion)-build
+        DockerBuildArgs: >-
+          --build-arg INSTALL_DEPS_EXTRA_ARGS=-tmur
+          --build-arg BUILD_UID=$(id -u)
+          --network=host --build-arg POLICY=manylinux2014 --build-arg PLATFORM=x86_64
+          --build-arg ROCM_VERSION=$(RocmVersion)
+          --build-arg DEVTOOLSET_ROOTPATH=/opt/rh/devtoolset-10/root
+          --build-arg PREPEND_PATH=/opt/rh/devtoolset-10/root/usr/bin:
+          --build-arg LD_LIBRARY_PATH_ARG=/opt/rh/devtoolset-10/root/usr/lib64:/opt/rh/devtoolset-10/root/usr/lib:/opt/rh/devtoolset-10/root/usr/lib64/dyninst:/opt/rh/devtoolset-10/root/usr/lib/dyninst:/usr/local/lib64:/usr/local/lib
+        Repository: onnxruntimetrainingrocmbuild-rocm$(RocmVersion)
+
+    - template: templates/set-version-number-variables-step.yml
 
     - task: Bash@3
       displayName: 'Build'
       inputs:
         targetType: filePath
         filePath: tools/ci_build/github/linux/build_rocm_c_api_package.sh
-        arguments: -S $(Build.SourcesDirectory) -B $(Build.BinariesDirectory) -V $(RocmVersion)
+        arguments: >-
+          -S $(Build.SourcesDirectory)
+          -B $(Build.BinariesDirectory)
+          -V $(RocmVersion)
+          -I onnxruntimetrainingrocmbuild-rocm$(RocmVersion)
+          -P python3.10
 
     - script: |
        set -e -x
