--- a/tools/ci_build/github/azure-pipelines/linux-qnn-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/linux-qnn-ci-pipeline.yml
@@ -1,3 +1,4 @@
+##### start trigger Don't edit it manually, Please do edit set-trigger-rules.py ####
 trigger:
   branches:
     include:
@@ -26,6 +27,8 @@ pr:
     - 'js/web'
     - 'js/node'
     - 'onnxruntime/core/providers/js'
+#### end trigger ####
+
 parameters:
 
 - name: QnnSdk
