--- a/tools/ci_build/github/azure-pipelines/win-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/win-ci-pipeline.yml
@@ -1,3 +1,4 @@
+##### start trigger Don't edit it manually, Please do edit set-trigger-rules.py ####
 trigger:
   branches:
     include:
@@ -10,6 +11,7 @@ trigger:
     - CONTRIBUTING.md
     - BUILD.md
     - 'js/web'
+    - 'js/node'
     - 'onnxruntime/core/providers/js'
 pr:
   branches:
@@ -23,7 +25,10 @@ pr:
     - CONTRIBUTING.md
     - BUILD.md
     - 'js/web'
+    - 'js/node'
     - 'onnxruntime/core/providers/js'
+#### end trigger ####
+
 parameters:
 - name: RunOnnxRuntimeTests
   displayName: Run Tests?
