--- a/tools/ci_build/github/azure-pipelines/orttraining-py-packaging-pipeline-cuda.yml
+++ b/tools/ci_build/github/azure-pipelines/orttraining-py-packaging-pipeline-cuda.yml
@@ -16,12 +16,13 @@ stages:
     opset_version: '15'
     cuda_version: '11.8'
     gcc_version: 11
-    cmake_cuda_architectures: 50;52;60;61;70;75;80;86;87
+    cmake_cuda_architectures: 60;61;70;75;80;86;90
     docker_file: Dockerfile.manylinux2014_training_cuda11_8
     agent_pool: Onnxruntime-Linux-GPU
     upload_wheel: 'yes'
     debug_build: false
 
+# Added for triton compiler team. Can be potentially removed.
 - template: templates/py-packaging-training-cuda-stage.yml
   parameters:
     build_py_parameters: --enable_training --update --build
@@ -29,7 +30,7 @@ stages:
     opset_version: '15'
     cuda_version: '11.8'
     gcc_version: 11
-    cmake_cuda_architectures: 50;52;60;61;70;75;80;86;87
+    cmake_cuda_architectures: 70;75;80;86
     docker_file: Dockerfile.manylinux2014_training_cuda11_8
     agent_pool: Onnxruntime-Linux-GPU
     upload_wheel: 'no'
