--- a/tools/ci_build/github/azure-pipelines/win-gpu-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/win-gpu-ci-pipeline.yml
@@ -70,7 +70,7 @@ stages:
         RunStaticCodeAnalysis: false
         ORT_EP_NAME: CUDA
         WITH_CACHE: true
-        # Some unit tests crash on A10 GPUs. So this job still needs to use A10.
+        # Some unit tests crash on A10 GPUs. So this job still needs to use T4.
         MachinePool: onnxruntime-Win2022-GPU-T4
         isTraining: true
 
