fix test launch error

--- a/tools/ci_build/github/azure-pipelines/templates/orttraining-linux-gpu-test-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/templates/orttraining-linux-gpu-test-ci-pipeline.yml
@@ -45,10 +45,9 @@ steps:
       --shm-size=1024m \
       --rm \
       --volume $(Build.SourcesDirectory):/onnxruntime_src \
-      --volume $(Build.BinariesDirectory):/build \
+      --volume $(Build.BinariesDirectory)/${{ parameters.BuildConfig }}:/build \
       ${{ parameters.DockerImageTag }} \
-        /build/launch_test.py \
-          --cwd /build --cmd_line_with_args "python orttraining_test_ort_apis.py --cwd /build" \
+        bash -c "rm -rf /build/onnxruntime/ && python3 -m pip install /build/dist/onnxruntime*.whl && /build/launch_test.py --cmd_line_with_args 'python orttraining_test_ort_apis.py' --cwd /build" \
   displayName: 'Run ORT Training APIs Tests'
   condition: succeededOrFailed()
   timeoutInMinutes: 120
