fix error in post merge

--- a/tools/ci_build/github/azure-pipelines/templates/jobs/win-ci-build-steps.yml
+++ b/tools/ci_build/github/azure-pipelines/templates/jobs/win-ci-build-steps.yml
@@ -75,7 +75,7 @@ steps:
       ${{ if eq(parameters.WithCache, true) }}:
         msbuildArgs: '${{parameters.MsbuildArguments}} ${{parameters.CacheArg}}'
       ${{ else }}:
-        arguments: '${{parameters.CMakeArguments}}'
+        msbuildArgs: '${{parameters.MsbuildArguments}}'
       msbuildArchitecture: ${{parameters.BuildArch}}
       maximumCpuCount: true
       logProjectEvents: false
