--- a/js/react_native/android/gradle.properties
+++ b/js/react_native/android/gradle.properties
@@ -17,3 +17,8 @@ OnnxruntimeModule_buildToolsVersion=29.0.2
 OnnxruntimeModule_compileSdkVersion=31
 OnnxruntimeModule_minSdkVersion=21
 OnnxruntimeModule_targetSdkVersion=31
+
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+# Default value: -Xmx512m -XX:MaxMetaspaceSize=256m
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m
