--- a/js/react_native/package.json
+++ b/js/react_native/package.json
@@ -24,7 +24,7 @@
     "pod-install": "^0.1.36",
     "prettier": "^2.6.2",
     "react": "18.2.0",
-    "react-native": "^0.69.7",
+    "react-native": "0.71.12",
     "react-native-builder-bob": "^0.18.2"
   },
   "peerDependencies": {
