--- a/tools/ci_build/github/azure-pipelines/templates/c-api-linux-cpu.yml
+++ b/tools/ci_build/github/azure-pipelines/templates/c-api-linux-cpu.yml
@@ -19,6 +19,9 @@ parameters:
 
 - name: OnnxruntimeNodejsBindingArch
   type: string
+  values:
+  - arm64
+  - x64
 
 - name: PoolName
   type: string
