Pr trggiers generated by code (#17247)
### Description
1. Refactor the trigger rules generation.
2. Skip all doc changes in PR pipelines.


### Motivation and Context 
Make all trigger rules generated by running set-trigger-rules.py to
reduce inconsistences.
It's easily to make mistakes to copy&paste manually. 

For example: these 2 excludes are different, Why?

https://github.com/microsoft/onnxruntime/blob/d262a7c735a81c3eefdb86eaa417d8c71951c43e/tools/ci_build/github/azure-pipelines/linux-ci-pipeline.yml#L16-L18


https://github.com/microsoft/onnxruntime/blob/d262a7c735a81c3eefdb86eaa417d8c71951c43e/tools/ci_build/github/azure-pipelines/linux-gpu-ci-pipeline.yml#L27-L29


### Note
All changes in workflow yamls are generated by code.
Please review the **skip-js.yml, skip-docs.yml and
set-trigger-rules.py**.

@fs-eire, please double check the 
filter rules in skip-js.yml
and the skipped workflows

https://github.com/microsoft/onnxruntime/blob/7023c2edff7704622ab65ce610f7de51a2ccbfae/tools/ci_build/set-trigger-rules.py#L14-L41

--- a/tools/ci_build/github/azure-pipelines/android-x86_64-crosscompile-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/android-x86_64-crosscompile-ci-pipeline.yml
@@ -1,8 +1,4 @@
-# Known Limits
-# 1. Anchors are not supported in GHA
-# https://github.community/t/support-for-yaml-anchors/16128/90
-# 2. today most cloud-based CI services are still lacking hardware acceleration support from the host VM,
-# which is the no.1 blocker for running tests on modern Android Emulators (especially on recent API levels) on CI.
+##### start trigger Don't edit it manually, Please do edit set-trigger-rules.py ####
 trigger:
   branches:
     include:
@@ -10,6 +6,10 @@ trigger:
     - rel-*
   paths:
     exclude:
+    - docs/**
+    - README.md
+    - CONTRIBUTING.md
+    - BUILD.md
     - 'js/web'
     - 'onnxruntime/core/providers/js'
 pr:
@@ -19,8 +19,20 @@ pr:
     - rel-*
   paths:
     exclude:
+    - docs/**
+    - README.md
+    - CONTRIBUTING.md
+    - BUILD.md
     - 'js/web'
     - 'onnxruntime/core/providers/js'
+#### end trigger ####
+
+# Known Limits
+# 1. Anchors are not supported in GHA
+# https://github.community/t/support-for-yaml-anchors/16128/90
+# 2. today most cloud-based CI services are still lacking hardware acceleration support from the host VM,
+# which is the no.1 blocker for running tests on modern Android Emulators (especially on recent API levels) on CI.
+
 # It'd better to check out https://github.com/microsoft/onnxruntime/wiki/Leverage-Existing-Artifacts
 # to save debugging time.
 parameters:
