--- a/tools/ci_build/github/azure-pipelines/win-qnn-arm64-ci-pipeline.yml
+++ b/tools/ci_build/github/azure-pipelines/win-qnn-arm64-ci-pipeline.yml
@@ -1,3 +1,4 @@
+##### start trigger Don't edit it manually, Please do edit set-trigger-rules.py ####
 trigger:
   branches:
     include:
@@ -5,8 +6,11 @@ trigger:
     - rel-*
   paths:
     exclude:
+    - docs/**
+    - README.md
+    - CONTRIBUTING.md
+    - BUILD.md
     - 'js/web'
-    - 'js/node'
     - 'onnxruntime/core/providers/js'
 pr:
   branches:
@@ -15,9 +19,14 @@ pr:
     - rel-*
   paths:
     exclude:
+    - docs/**
+    - README.md
+    - CONTRIBUTING.md
+    - BUILD.md
     - 'js/web'
-    - 'js/node'
     - 'onnxruntime/core/providers/js'
+#### end trigger ####
+
 parameters:
 
 - name: QnnSdk
@@ -61,7 +70,7 @@ jobs:
   - task: NuGetToolInstaller@1
     inputs:
       versionSpec: 6.4.x
-     
+
   - task: PythonScript@0
     displayName: 'Build'
     inputs:
