--- a/tools/ci_build/github/azure-pipelines/c-api-noopenmp-packaging-pipelines.yml
+++ b/tools/ci_build/github/azure-pipelines/c-api-noopenmp-packaging-pipelines.yml
@@ -246,7 +246,7 @@ stages:
           --build-arg INSTALL_DEPS_EXTRA_ARGS=-tmur
           --build-arg BUILD_UID=$(id -u)
           --network=host
-          --build-arg ROCM_VERSION=${{ parameters.RocmVersion }}
+          --build-arg ROCM_VERSION=$(RocmVersion)
         Repository: onnxruntimetrainingrocmbuild-rocm$(RocmVersion)
 
     - template: templates/set-version-number-variables-step.yml
